added new recipies

--- a/bigpot/templates/index.html
+++ b/bigpot/templates/index.html
@@ -21,7 +21,7 @@
             <div class="card">
               <div class="card-header" id="headingOne" >
                 <h5 class="mb-0" style="display: flex; align-items: center;">
-                  <img style="float: left;" class="mr-3" src="{{ recipe.image }}" alt="Dessert Image">
+                  <img style="float: left; max-width: 350px;" class="mr-3" src="{{ recipe.image }}" alt="Dessert Image">
                   <div>
                     <button style="font-size:large;letter-spacing: 3px;" class="btn btn-dark" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                       {{ recipe.name }}
@@ -34,7 +34,7 @@
           
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                  how do i put the ingredients and method here?????????????????
+                  how do i put the ingredients and method here
                 </div>
               </div>
             </div>
