--- a/bigpot/templates/index.html
+++ b/bigpot/templates/index.html
@@ -32,15 +32,27 @@
                 </h5>
               </div>
           
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                  how do i put the ingredients and method here
+                  <div class="container px-2" style="display: flex;" >
+                    <div>
+                      <h5><strong>Ingredients:</strong></h5>
+                      {% for ingredient in recipe.ingredients %}
+                          <li style="list-style: none; text-indent: 4%; font-size: small;" class="mb-2">{{ ingredient }}</li>
+                      {% endfor %}
+                    </div>
+                    <div class="m-2 px-5">
+                      <h5><strong>Method:</strong></h5>
+                      {% for step in recipe.steps %}
+                          <li style="list-style:decimal; font-size: small;" class="mb-2">{{ step }}</li>
+                      {% endfor %}
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
 
           {% endfor %}
-
         </div>
     </div>
 </section>
