fixed login css on navbar

--- a/bigpot/templates/index.html
+++ b/bigpot/templates/index.html
@@ -3,16 +3,16 @@
 
 
 
-<div class="page-section clearfix">
-  <div class="container mt-3 mb-3">
+<div class="page-section clearfix mt-5">
+  <div class="container mt-5 mb-5">
     <div class="row mx-auto">
-      <h1 class="mt-4 mb-4">Easy Desserts</h1>
+      <h1 class="mt-5">Easy Desserts</h1>
     
     </div>
   </div>
 </div>
 
-<section class="page-section clearfix mt-4">
+<section class="page-section clearfix mt-5">
     <div class="container">
         <div id="accordion">
 
