--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                            <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
