about page update

--- a/bigpot/templates/about.html
+++ b/bigpot/templates/about.html
@@ -27,21 +27,23 @@
 
 <!-- Team Section -->
 <hr>
-<section class="mt-5 px-5 bg-light">
-    <div class="container">
-        <h2 class="text-center mt-5 mb-5">Meet Our Team</h2>
-            
+<section class="pt-5 bg-light">
+    <div>
+        <div class="text-center mb-5" >
+            <h2 class="mb-4">Meet Our Team</h2>
+        </div>
+                
         <div class="row">
             <div class="col-md-4">
                 <div style="text-align: center;">
-                    <img style="height: 150px; width: 150px;" src="https://media.istockphoto.com/id/992952572/photo/portrait-of-an-elderly-smiling-man.jpg" alt="Team Member">
-                    <h3 class="mt-3">John Doe</h3>
+                    <img style="height: 150px; width: 150px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE6zolzsuthiUrIsTtWBqBJOSRQJppegIIK-Pfax73Rg&s" alt="Team Member">
+                    <h3 class="mt-3">Emma Right</h3>
                     <p>CEO & Founder</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div style="text-align: center;">
-                    <img style="height: 150px; width: 150px;" src="https://media.istockphoto.com/id/157530431/photo/senior-man-portrait-on-black-background.jpg" alt="Team Member">
+                    <img style="height: 150px; width: 150px;" src="https://images.squarespace-cdn.com/content/v1/5aee389b3c3a531e6245ae76/1628444769450-0AAE0PZIJ0K03LXI66JB/Franklin_Knox_Headshots+%283%29.jpg" alt="Team Member">
                     <h3 class="mt-3">Mike Johnson</h3>
                     <p>Marketing Manager</p>
                 </div>
