community page updated

--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -119,5 +119,7 @@
         $("#copyright").text(new Date().getFullYear());
     </script>
 
+    <script src="{{ url_for('static', filename='js/comments.js') }}"></script> </script>
+    
     </body>
 </html>
