--- a/bigpot/templates/community.html
+++ b/bigpot/templates/community.html
@@ -1,6 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>about page/h1>
+
+<section class="community-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h1 class="mt-5 mb-4">{{ page_title }}</h1>
+                    <p>
+                        Welcome to our community page. Share your opinion on any receipe...
+                    </p>
+
+                <form action="/submit-comment" method="post">
+                    <label for="name">Your Name:</label>
+                    <br>
+                    <input  class="mt-3 mb-3" style="width: 600px;" type="text" id="name" name="name" required>
+                    <br>
+                    <label for="comment">Your Comment:</label>
+                    <br>
+                    <textarea  class="mt-3 mb-3"  style="width: 600px;" id="comment" name="comment" required></textarea>
+                    <br>
+                    <button type="submit">Submit Comment</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<hr class="mt-5 mb-5">
+
+<section class="about-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2 class="mb-5">Comments:</h2>
+                <ul style="list-style: none;">
+                    {% for comment in comments %}
+                        <li class="mb-2" id="comment_{{ loop.index }}">
+                            <strong>{{ comment.name }}</strong>: <span id="comment_text_{{ loop.index }}">{{ comment.comment }}</span>
+                            <button style="float:right;" onclick="deleteComment( {{ loop.index }} )">Delete</button>
+                            <button style="float:right;" onclick="editComment( {{ loop.index }} )">Edit</button>
+                            <form id="edit_form_{{ loop.index }}" action="/edit-comment" method="post" style="display:none;">
+                                <input type="hidden" name="comment_id" value="{{ loop.index }}">
+                                <input type="text" name="edited_comment" value="{{ comment.comment }}">
+                                <button type="submit">Save</button>
+                            </form>
+                            <form id="delete_form_{{ loop.index }}" action="/delete-comment" method="post" style="display:none;">
+                                <input type="hidden" name="comment_id" value="{{ loop.index }}">
+                            </form>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
