--- a/bigpot/templates/contact.html
+++ b/bigpot/templates/contact.html
@@ -65,7 +65,7 @@
 					<br>
 					<div id="success"></div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+						<button type="submit" id="sendMessageButton">Send</button>
 					</div>
 				</form>
 			</div>
