--- a/bigpot/templates/about.html
+++ b/bigpot/templates/about.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+<div class="page-section clearfix mt-5">
+	<div class="container mt-5 mb-5">
+	  <div class="row mx-auto">
+		<h1 class="mt-5">{{ page_title }}</h1>
+	  
+	  </div>
+	</div>
+</div>
+
 <section class="about-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h2 class="mt-5 mb-4">{{ page_title }}</h2>
                 <p>
                     Welcome to Cook It, your ultimate destination for exploring the sweet side of life! <br> Whether you're a newcomer to
                     the world of desserts or a seasoned baker, Cook It is here to inspire you with delightful recipes and helpful tips.
