--- a/bigpot/templates/community.html
+++ b/bigpot/templates/community.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="page-section clearfix mt-5">
+	<div class="container mt-5 mb-5">
+	  <div class="row mx-auto">
+		<h1 class="mt-5">{{ page_title }}</h1>
+	  
+	  </div>
+	</div>
+</div>
 
 <section class="community-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h1 class="mt-5 mb-4">{{ page_title }}</h1>
                     <p>
                         Welcome to our community page. Share your opinion on any receipe...
                     </p>
