--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -40,11 +40,7 @@
                             <a class="nav-link" href="{{ url_for('community') }}">Community</a>
                         </li>
                         <li class="nav-item">
-                            {% if session.logged_in %}
-                                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                            {% else %}
-                                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                            {% endif %}
+                            <a class="nav-link" href="#">Login</a>
                         </li>
                     </ul>
                 </div>
