--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="{{ url_for('community') }}">Community</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                     </ul>
                 </div>
