--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -46,7 +46,11 @@
                             <a class="nav-link" href="{{ url_for('community') }}">Community</a>
                         </li>
                         <li class="nav-item">
+                        {% if session.logged_in %}
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        {% else %}
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        {% endif %}
                         </li>
                     </ul>
                 </div>
