--- a/bigpot/templates/community.html
+++ b/bigpot/templates/community.html
@@ -14,21 +14,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                    <p>
-                        Welcome to our community page. Share your opinion on any receipe...
-                    </p>
+                
+                <p>
+                    Welcome to our community page. Share your opinion on any receipe...
+                </p>
 
-                <form action="/submit-comment" method="post">
-                    <label for="name">Your Name:</label>
-                    <br>
-                    <input  class="mt-3 mb-3" style="width: 600px;" type="text" id="name" name="name" required>
-                    <br>
-                    <label for="comment">Your Comment:</label>
-                    <br>
-                    <textarea  class="mt-3 mb-3"  style="width: 600px;" id="comment" name="comment" required></textarea>
-                    <br>
-                    <button type="submit">Submit Comment</button>
+                <form action="{{ url_for('add_comment') }}" method="post">
+                    <textarea class="mt-3 mb-3" name="comment" id="comment" cols="30" rows="5" placeholder="Leave your comment here" required></textarea>
+                    <button type="submit">Submit</button>
                 </form>
+
             </div>
         </div>
     </div>
@@ -43,7 +38,7 @@
                 <h2 class="mb-5">Comments:</h2>
                 <ul style="list-style: none;">
                     {% for comment in comments %}
-                        
+                        <li>{{ comment }}</li>
                     {% endfor %}
                 </ul>
             </div>
