--- a/bigpot/templates/login.html
+++ b/bigpot/templates/login.html
@@ -56,16 +56,29 @@
 <section class="login-section">
     <div class="login-container">
         <h2>Login</h2>
-        <form action="#" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <hr>
+                        <strong>{{ message }}</strong>
+                    <hr>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
+        <form action="{{ url_for('authentication') }}" method="post">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
+
         <br>
         <div class="signup-link">
             Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a>
         </div>
         <br>
+
     </div>
 </section>
 
