--- a/bigpot/templates/signup.html
+++ b/bigpot/templates/signup.html
@@ -57,6 +57,17 @@
 <section class="signup-section">
     <div class="login-container">
         <h2>Sign up here</h2>
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <hr>
+                        <strong>{{ message }}</strong>
+                    <hr>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <form action="{{ url_for('add_users') }}" method="post">
             <input type="text" id="username" name="username" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
