added crud function & code tidy

--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -105,7 +105,7 @@
         $("#copyright").text(new Date().getFullYear());
     </script>
 
-    <script src="{{ url_for('static', filename='js/comments.js') }}"></script> </script>
+    <script src="{{ url_for('static', filename='js/logout.js') }}"></script> </script>
     
     </body>
 </html>
