--- a/bigpot/templates/community.html
+++ b/bigpot/templates/community.html
@@ -14,16 +14,26 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
+
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            <strong>{{ message }}</strong>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
                 
                 <p>
                     Welcome to our community page. Share your opinion on any receipe...
                 </p>
 
                 <form action="{{ url_for('add_comment') }}" method="post">
-                    <textarea class="mt-3 mb-3" name="comment" id="comment" cols="30" rows="5" placeholder="Leave your comment here" required></textarea>
-                    <button type="submit">Submit</button>
+                    <textarea class="mt-3 mb-3" id="comment" name="comment" cols="100" rows="10" placeholder="Leave your comment here" required></textarea>
+                    <br>
+                    <div class="text-center">
+                        <button type="submit" class="btn-success btn-xs">Submit</button>
+                    </div>
                 </form>
-
             </div>
         </div>
     </div>
@@ -31,15 +41,40 @@
 
 <hr class="mt-5 mb-5">
 
-<section class="about-section">
+<section class="comments-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <h2 class="mb-5">Comments:</h2>
                 <ul style="list-style: none;">
-                    {% for comment in comments %}
-                        <li>{{ comment }}</li>
+
+                    {% for comment in comments %} 
+                    
+                        <li>
+                            <div style="display: flex; justify-content: space-between;">
+                                <div>
+                                    <strong>{{ comment.user.username }}: </strong> {{ comment.comment }}
+                                </div>
+                                
+                                {% if session.logged_in and comment.user_id == session.user_id %}
+                                <div>
+                                    <!-- edit the comment -->
+                                    <form action="{{ url_for('edit_comment', comment_id=comment.id) }}" method="post">
+                                        <button type="submit" class="btn-primary btn-xs">Edit</button>
+                                    </form>
+                                    <!-- delete the comment -->
+                                    <form action="{{ url_for('delete_comment', comment_id=comment.id) }}" method="post">
+                                        <button type="submit" class="btn-danger btn-xs">Delete</button>
+                                    </form>
+                                </div>
+                                {% endif %}
+                            </div>
+                            <br>
+                            <hr>
+                        </li>
+                    
                     {% endfor %}
+
                 </ul>
             </div>
         </div>
