fixed html template errors

--- a/bigpot/templates/about.html
+++ b/bigpot/templates/about.html
@@ -15,9 +15,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <p>
-                    Welcome to Cook It, your ultimate destination for exploring the sweet side of life! <br> Whether you're a newcomer to
-                    the world of desserts or a seasoned baker, Cook It is here to inspire you with delightful recipes and helpful tips.
+                <h6>Cook It, your ultimate destination for exploring the sweet side of life!</h6>
+
+                    <br> 
+
+                <p> Whether you're a newcomer to the world of desserts or a seasoned baker, Cook It is here to inspire you with delightful recipes and helpful tips.
 
                     At Cook It, we're passionate about all things sweet. From decadent cakes to indulgent cookies and everything in
                     between, our goal is to make dessert-making fun, approachable, and rewarding for everyone.
@@ -28,7 +30,11 @@
 
                     Join our community of fellow dessert enthusiasts, share your baking adventures, and let's embark on a delicious
                     journey together. Get ready to indulge your sweet tooth and unleash your inner pastry chef and just<strong> Cook It!</strong>
+                
                 </p>
+
+                <br>
+
             </div>
         </div>
     </div>
