--- a/bigpot/templates/base.html
+++ b/bigpot/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Cook It</title>
 
         <!-- favicon -->
@@ -14,7 +14,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
         <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/cookit.min.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
@@ -28,9 +28,9 @@
             <div class="container">
                 <a class="navbar-brand" href="{{ url_for('index') }}">Cook It</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            
-                <i class="fas fa-bars"></i>
-              </button>
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
+                
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -105,7 +105,7 @@
         $("#copyright").text(new Date().getFullYear());
     </script>
 
-    <script src="{{ url_for('static', filename='js/logout.js') }}"></script> </script>
+    <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
     
     </body>
 </html>
