--- a/bigpot/templates/contact.html
+++ b/bigpot/templates/contact.html
@@ -10,7 +10,7 @@
 </div>
 
 <!--contact form-->
-<section class="page-section clearfix mt-5"></section>
+<section class="page-section clearfix mt-5">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
@@ -30,7 +30,7 @@
             {% endwith %}
 
 
-				<p>Want to get in touch? Fill out the form below and send us a message. We will endeavor to get back to you as soon as possible!</p>
+				<h6>Want to get in touch? Fill out the form below and send us a message. We will endeavor to get back to you as soon as possible!</h6>
 				
 				<form method="POST" name="sentMessage" id="contactForm" novalidate>
 					<div class="control-group">
@@ -64,7 +64,7 @@
 					<br>
 					<div id="success"></div>
 					<div class="form-group">
-						<button type="submit" id="sendMessageButton">Send</button>
+						<button type="submit" class="btn-xs btn-success" id="sendMessageButton">Send</button>
 					</div>
 				</form>
 			</div>
